# ai_project

./: .gitignore  README.md  ai_legacy_modernization_platform_report.md
backend/: Dockerfile  README.md  alembic.ini  cli.py  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/adapters/: __init__.py  base.py  java.py  js_ts.py  php.py  python_ast.py
backend/app/agents/: __init__.py  base.py  language_detector.py  learner.py  mapper.py  planner.py  smell_detector.py  transformer.py  validator.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin.py  analyze.py  graph.py  patches.py  plan.py  report.py  router.py  settings.py  smells.py  validate.py  vcs.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  logging.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 20260306_add_app_settings_table.py  20260306_add_job_logs_table.py  20260307_add_prompt_to_patches.py  20260307_add_repo_path_to_jobs.py
backend/app/models/: __init__.py  api_key.py  app_setting.py  job.py  job_log.py  patch.py  plan.py  smell.py  ucg.py  vcs.py
backend/app/schemas/: __init__.py  job.py  patch.py  plan.py  smell.py  ucg.py  vcs.py
backend/app/services/: __init__.py  analysis.py  report.py  vcs.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
backend/app/services/queue/: __init__.py  rabbitmq.py
backend/app/workers/: __init__.py  pipeline_worker.py
docs/: api-spec.md  architecture.md  db-schema.md  roadmap.md  (+2 more)
(+90 files in other folders)
