[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alm-backend"
version = "0.2.0"
description = "AI Legacy Modernization Platform — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "aio-pika==9.5.1",
    "anthropic==0.45.0",
    "openai==1.61.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "typer==0.15.1",
    "rich==13.9.4",
    "pgvector==0.3.6",
    "bcrypt>=4.2.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.20",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "ruff==0.9.4",
    "mypy==1.14.1",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.1",
]

[project.scripts]
alm = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806"]  # UPPER_CASE constants in function bodies are acceptable

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
